--- a/EmployeesEvaluation.WEB/bower.json
+++ b/EmployeesEvaluation.WEB/bower.json
@@ -6,6 +6,13 @@
     "jquery": "2.2.0",
     "jquery-validation": "1.14.0",
     "jquery-validation-unobtrusive": "3.2.6",
-    "kendo-ui": "2017.1.411"
+    "kendo-ui": "2017.1.411",
+    "polymer": "v1.9.1",
+    "paper-dropdown-menu": "v1.5.1",
+    "paper-item": "v1.2.2",
+    "paper-listbox": "v1.1.3",
+    "paper-button": "v1.0.15",
+    "paper-icon-button": "v1.1.6",
+    "iron-ajax": "v1.4.4"
   }
 }
