--- a/EmployeesEvaluation.WEB/bower.json
+++ b/EmployeesEvaluation.WEB/bower.json
@@ -12,7 +12,9 @@
     "paper-item": "v1.2.2",
     "paper-listbox": "v1.1.3",
     "paper-button": "v1.0.15",
+    "iron-ajax": "v1.4.4",
+    "iron-form": "v1.1.4",
     "paper-icon-button": "v1.1.6",
-    "iron-ajax": "v1.4.4"
+    "iron-icons": "v1.2.1"
   }
 }
