Create Evaluation And Question Component

--- a/EmployeesEvaluation.WEB/EmployeesEvaluation.WEB.csproj
+++ b/EmployeesEvaluation.WEB/EmployeesEvaluation.WEB.csproj
@@ -13,6 +13,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="wwwroot\WebComponents\evaluation-form.html" />
     <Content Include="wwwroot\WebComponents\question-card.html" />
     <Content Include="wwwroot\WebComponents\question-form - Cópia.html">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
