--- a/EmployeesEvaluation.WEB/bower.json
+++ b/EmployeesEvaluation.WEB/bower.json
@@ -15,6 +15,8 @@
     "iron-ajax": "v1.4.4",
     "iron-form": "v1.1.4",
     "paper-icon-button": "v1.1.6",
-    "iron-icons": "v1.2.1"
+    "iron-icons": "v1.2.1",
+    "paper-toolbar": "v1.1.7",
+    "paper-autocomplete": "v2.5.1"
   }
 }
